[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["AsmFlow Contributors"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96.0"
version = "0.1.0"

[workspace.dependencies]
rasm-ast = { path = "crates/rasm-ast" }
rasm-lexer = { path = "crates/rasm-lexer" }
rasm-span = { path = "crates/rasm-span" }

insta = "1.47.2"
memchr = "2.8.0"
unicode-ident = "1.0.24"
