[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["AsmFlow Contributors"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96.0"
version = "0.1.0"

[workspace.dependencies]
rasm-ast = { path = "crates/rasm-ast" }
rasm-errors = { path = "crates/rasm-errors" }
rasm-driver = { path = "crates/rasm-driver" }
rasm-lexer = { path = "crates/rasm-lexer" }
rasm-parser = { path = "crates/rasm-parser" }
rasm-session = { path = "crates/rasm-session" }
rasm-span = { path = "crates/rasm-span" }

annotate-snippets = "0.12.14"
anstream = "1.0.0"
colorchoice = "1.0.5"
insta = "1.47.2"
memchr = "2.8.0"
unicode-ident = "1.0.24"
