[package]
name = "rasm-driver"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
rasm-errors = { workspace = true }
rasm-parser = { workspace = true }
rasm-session = { workspace = true }

anstream = { workspace = true }
