[package]
name = "rasm-errors"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
rasm-span = { workspace = true }

annotate-snippets = { workspace = true }
anstream = { workspace = true }
colorchoice = { workspace = true }
