[package]
name = "rasm-parser"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
rasm-ast = { workspace = true }
rasm-span = { workspace = true }

insta = { workspace = true }
memchr = { workspace = true }
unicode-ident = { workspace = true }
