[package]
name = "rasm-parser"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
rasm-ast = { workspace = true }
rasm-errors = { workspace = true }
rasm-lexer = { workspace = true }
rasm-session = { workspace = true }
rasm-span = { workspace = true }
